--- a/slick_example/templates/slick_example/index.html
+++ b/slick_example/templates/slick_example/index.html
@@ -3,20 +3,16 @@
 {% block code %}
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">Welcome to Sslilck reproting interactive demo</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-                etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+            <h1 class="jumbotron-heading">Welcome to Django Slick Reporting</h1>
+            <p class="lead text-muted">Powerful and Efficient reporting engine with Charting capabilities.
+                Allowing you to create professional analytics that are customizable and efficient.</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                <a href="{% url 'simple-filer' %}" class="btn btn-primary my-2">Start Walk-through</a>
+                <a href="https://github.com/ra-systems/django-slick-reporting" class="btn btn-secondary my-2">Github</a>
             </p>
         </div>
     </section>
 
-    We have A Report Fields -> ReportGenerator -> ReportView
-
-    Report Fields are a consolidated class explaining how calculation should preformed.
 
 
-    This is a live documentation ... the code you see on top of the page in indeed the code serving the page
 {% endblock %}
