--- a/slick_example/templates/base.html
+++ b/slick_example/templates/base.html
@@ -22,9 +22,16 @@
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
 
+
     <style>
-        pre code {
-            font-size: 1.3em;
+        {#pre code {#}
+        {#    font-size: 1.3em;#}
+        {# }#}
+        .triple-quoted-string {
+            color: green !important;
+        }
+        .token.operator {
+            background: initial !important;
         }
     </style>
 
@@ -90,8 +97,8 @@
                 <h4>{{ menu.current.1 }}</h4>
             {% endblock %}
             {% block code %}
-                <pre><code class="python">{{ code|safe }}
-                </code></pre>
+                <pre><code class="language-python">{{ code|safe }}</code>
+                </pre>
             {% endblock %}
 
 
@@ -142,17 +149,20 @@
 <script src="{% static 'slick_reporting/ra.highchart.js' %}"></script>
 <script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
 
-<link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/styles/default.min.css">
+{#<link rel="stylesheet"#}
+{#      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/styles/default.min.css">#}
 
 
-<link rel="stylesheet" type="text/css"
-      href="https://highlightjs.org/static/demo/styles/a11y-dark.css"/>
+{#<link rel="stylesheet" type="text/css" href="https://highlightjs.org/static/demo/styles/a11y-dark.css"/>#}
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/themes/prism.css"/>
 
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/highlight.min.js"></script>
-
-<script>hljs.initHighlightingOnLoad();</script>
+{#<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/themes/prism-dark.css">#}
+{#<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/themes/prism-tomorrow.css" integrity="sha256-0dkohC9ZEupqWbq0hS5cVR4QQXJ+mp6N2oJyuks6gt0=" crossorigin="anonymous">#}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/themes/prism-twilight.css" integrity="sha256-Rl83wx+fN2p2ioYpdvpWxuhAbxj+/7IwaZrKQBu/KQE=" crossorigin="anonymous">
+{#<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/highlight.min.js"></script>#}
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/prism.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/plugins/autoloader/prism-autoloader.min.js"></script>
+{#<script>hljs.initHighlightingOnLoad();</script>#}
 
 <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"
