--- a/slick_example/templates/slick_example/index.html
+++ b/slick_example/templates/slick_example/index.html
@@ -7,7 +7,7 @@
             <p class="lead text-muted">Powerful and Efficient reporting engine with Charting capabilities.
                 Allowing you to create professional analytics that are customizable and efficient.</p>
             <p>
-                <a href="{% url 'simple-filer' %}" class="btn btn-primary my-2">Start Walk-through</a>
+                <a href="{% url 'report-model' %}" class="btn btn-primary my-2">Start walk through</a>
                 <a href="https://github.com/ra-systems/django-slick-reporting" class="btn btn-secondary my-2">Github</a>
             </p>
         </div>
