--- a/slick_example/templates/slick_example/index.html
+++ b/slick_example/templates/slick_example/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block page_title %}
+{#                <h3 class="py-3">{{ menu.current.1 }}</h3>#}
+            {% endblock %}
+
 {% block code %}
     <section class="jumbotron text-center">
         <div class="container">
@@ -12,6 +16,35 @@
             </p>
         </div>
     </section>
+
+    <div class="container">
+        <!-- Example row of columns -->
+{#        <div class="row">#}
+{#          <div class="col-md-4">#}
+{#            <h2>Interactive</h2>#}
+{#            <p>Code you see in the demo is actually running the view. You can filter </p>#}
+{#            <p><a class="btn btn-secondary" href="https://github.com/ra-systems/slick-reporting-demo" role="button">This site on Github »</a></p>#}
+{#          </div>#}
+{#          <div class="col-md-4">#}
+{#            <h2>Docs</h2>#}
+{#            <p>You can check Django Slick Reporting documentation for more in depth information</p>#}
+{#            <p><a class="btn btn-secondary" href="https://django-slick-reporting.readthedocs.io/" role="button">Read the docs »</a></p>#}
+{#          </div>#}
+{#          <div class="col-md-4">#}
+{#            <h2>Heading</h2>#}
+{#            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.#}
+{#                                    <a class="github-button" href="https://github.com/ra-systems/django-slick-reporting"#}
+{#                           data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-icon="octicon-star"#}
+{#                           data-show-count="true" aria-label="Star ra-systems/django-slick-reporting on GitHub">Star</a>#}
+{#            </p>#}
+{#            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>#}
+{#          </div>#}
+{#        </div>#}
+
+        <hr>
+
+      </div>
+
 
 
 
