Add documentation link

--- a/slick_example/templates/base.html
+++ b/slick_example/templates/base.html
@@ -87,6 +87,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/ra-systems/django-slick-reporting">Github</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://django-slick-reporting.readthedocs.io/en/latest/index.html">Documentation</a>
+                    </li>
                     {#                    <li class="nav-item dropdown">#}
                     {#                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"#}
                     {#                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
